# aerial-library

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
aerial_library/: __init__.py  drone.py  droneactions.py  util.py
aerial_library/api/: actions.py  drone.py  errors.py  feature.py  measure.py  move.py
aerial_library/backend/: batterystate.py  connectionstate.py  drone.py  motioncontroller.py  multirangerdeck.py  position.py  util.py
user-documentation/: main.typ
