[project]
name = "aerial-library"
authors = [
    { name = "Konstantin Lindorfer", email = "konstantin.lindorfer@robo4you.at" }
]
description = "Intuitive controls for a Crazyflie drone, built for the robo4you Aerial Junior Challenge"
version = "0.2.0"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.11"
dependencies = [
    "appdirs>=1.4.4",
    "cflib>=0.1.30",
]

[project.urls]
homepage = "https://aerial-challenge.org"
